--- a/alura-med/src/main/resources/application.properties
+++ b/alura-med/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/clinica
 spring.datasource.username=root
 spring.datasource.password=R@g@r985334581
+
+
+spring.data.web.pageable.page-parameter=pagina
+spring.data.web.pageable.size-parameter=tamanho
+spring.data.web.sort.sort-parameter=ordem
