--- a/alura-med/src/main/resources/application.properties
+++ b/alura-med/src/main/resources/application.properties
@@ -2,8 +2,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/clinica
 spring.datasource.username=root
-spring.datasource.password=R@g@r985334581
+spring.datasource.password=root
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.data.web.pageable.page-parameter=pagina
 spring.data.web.pageable.size-parameter=tamanho
